<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:padding="@dimen/medium_space">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginBottom="@dimen/small_space"
            app:layout_constraintBottom_toTopOf="@id/dialog_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="@dimen/line_spacing_headline6"
            android:padding="@dimen/small_space"
            android:textAlignment="center"
            android:textColor="@color/AppColor"
            app:layout_constraintBottom_toTopOf="@id/dialog_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/error" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="@dimen/line_spacing_body1"
            android:paddingHorizontal="@dimen/small_space"
            android:paddingVertical="@dimen/normal_space"
            android:text="@string/error"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/flow_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_header" />


        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            android:orientation="horizontal"
            app:constraint_referenced_ids="positive_btn, negative_btn"
            app:flow_horizontalGap="@dimen/small_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_desc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positive_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negative_btn"
            style="?materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
